<resources>
    <string name="app_name">Sam Beauty World</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dashboard">dashboardActivity</string>
    <string name="signup">Signup</string>
    <string name="login_with_facebook">login with facebook</string>
    <string name="login_with_google">login with google</string>
    <string name="login_with_linkedin">login with linkedin</string>
    <string name="nulls">null</string>
    <string name="pre_id">lakhwinder.singh@debutinfotech.com</string>
    <string name="pre_password">123456</string>
    <string name="server_error">Oops! looks like we are having internal problems. Please try again later.</string>
    <string name="login">LOGIN</string>
    <string name="logging">Logging </string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email Address</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="password">Password</string>
    <string name="login_facebook">FACEBOOK</string>
    <string name="login_google">GOOGLE</string>
    <string name="login_linkedin">LOGIN WITH LINKED-IN</string>
    <string name="canceled">Canceled</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_register_email">Enter registered email</string>
    <string name="date_of_birth">D.O.B</string>
    <string name="gender">GENDER</string>
    <string name="registration">Registration</string>
    <string name="registering">Registering</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="register_validation_error">Please enter valid data</string>
    <string name="email_empty">Please enter e-mail</string>
    <string name="validate_email">Please enter a valid email address like example@domain.com</string>
    <string name="password_empty">Please enter your password.</string>
    <string name="password_range">Password should be greater than 5 and less than 15 characters.</string>
    <string name="dob_empty">Please select your date of birth.</string>
    <string name="gender_empty">Please select gender.</string>
    <string name="first_name_empty">Please enter your first name.</string>
    <string name="last_name_empty">Please enter your last name.</string>
    <string name="validation_first_name">Please enter name between 1 to 25 alphabets.</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="dont_specify">DONT SPECIFY</string>
    <string name="no_internet_message">Internet connection appears to be offline. Please check your network settings.</string>
    <string name="update">UPDATE</string>
    <string name="updating">Updating</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="close">Close</string>
    <string name="logout">Logout</string>
    <string name="remove">Remove</string>
    <string-array name="Search">
        <item>Doctor Name</item>
        <item>Location</item>
        <item>Zip Code</item>
    </string-array>
    <string name="alert">Alert!</string>
    <string name="alert_message_for_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="loading">Loading, please wait</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="choose_photo_description">Want to change the photo? Tap here</string>
    <string name="login_desc">Sign In to your Account</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="button_sign_in">Sign in</string>
    <string name="choose_account_btn_sign">Sign in to your account</string>
    <string name="choose_create_an_account">Create an account</string>
    <string name="forgot_password_heading">Forgot Password</string>
    <string name="forgot_password_desc">Enter your email address, and we\'ll drop you an\n email with reset link</string>
    <string name="hint_forgotPasswort_enter">Enter your email address</string>
    <string name="button_submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="setup_your_profile">Setup your Profile</string>
    <string name="SignUp_first_name">First Name</string>
    <string name="signUp_last_name">Last Name</string>
    <string name="SignUp_choose_password">Choose Password</string>
    <string name="SignUp_confirm_password">Confirm Password</string>
    <string name="signUp_company_name">Company Name</string>
    <string name="company_division">Company Division</string>
    <string name="signUp_8_characters">6 characters*</string>
    <string name="signUp_if_applicable">(if applicable)</string>
    <string name="signUP_next">Next</string>
    <string name="signUp_address_line_1">Address Line 1</string>
    <string name="signUp_address_line_2">Address Line 2</string>
    <string name="signUP_city">City</string>
    <string name="signUp_state">State</string>
    <string name="SignUp_zip">Zip</string>
    <string name="SignUp_contact_number">Contact Number</string>
    <string name="SignUp_company_email_address">Company Email Address</string>
    <string name="SignUp_secondary_email_address">Secondary Email Address</string>
    <string name="select_your_industry">Select Your Industry</string>
    <string name="SignUP_products_promoted">Products Promoted</string>
    <string name="SignUP_repTeam_member">Add rep team member</string>
    <string name="signup_rep_type">Please select rep type</string>
    <string name="SignUp_rep_type">Rep Type</string>
    <string name="SignUp_add_profile_picture">Add Profile Picture</string>
    <string name="reset_your_password_heading">Reset Your Password</string>
    <string name="text_Reset_desc">We have sent a link to your email inbox . \n  Remember to check your spam filter.</string>
    <string name="add_task">Add Task</string>
    <string name="task_title">Title</string>
    <string name="task_description">Description (Max Characters 2000) </string>
    <string name="task_select_date_from">Select Date</string>
    <string name="task_select_time_from">Start Time</string>
    <string name="task_select_time_to">End Time</string>
    <string name="search_doctor_desc">To add an appointment, either search \n for your contact or create new contact</string>
    <string name="create_a_doctor_profile">CREATE A DOCTOR PROFILE</string>
    <string name="search_by">Search by</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">SUBMIT</string>
    <string name="contact_us">Contact Us</string>
    <string name="description">Description</string>
    <string name="contact_us_email">Email</string>
    <string name="medical_professional">MEDICAL PROFESSIONAL</string>
    <string name="sales_rep">SALES REP</string>
    <string name="choose_your_account_type">CHOOSE YOUR ACCOUNT TYPE</string>
    <string name="date_format">MMMM dd, yyyy</string>
    <string name="date_format_request">yyyy-MM-dd</string>
    <string name="time_format_request">HH:mm:ss</string>
    <string name="view_date_format">yyyy-MM-dd hh:mm:ss</string>
    <string name="monthly_date_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="formatted_place_data">%1$s</string>
    <string name="place_select_failed">Place selection failed:</string>
    <string-array name="menu_item">
        <item>view Schedule</item>
        <item>view Targets</item>
        <item>Full Doctor Database</item>
        <item>Upgrade Account</item>
        <item>Add Task</item>
        <item>Rep Team</item>
        <item>Transaction history</item>
        <item>Sample Request</item>
        <item>Help</item>
        <item>View Analytics</item>
        <item>Settings</item>
        <item>Logout</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="signUp_first_name_empty">Please enter your first name.</string>
    <string name="signUp_last_name_empty">Please enter your last name.</string>
    <string name="signUp_password_empty">Please enter password.</string>
    <string name="sifnUp_confirm_password">Please enter confirm password.</string>
    <string name="signUp_confirmPassword_empty">Please enter confirm password.</string>
    <string name="signUp_confirmPassword_match">Your new and confirm password do not match.</string>
    <string name="signUp_password_length">Please enter password between 6 to 30 characters, your password should include alphabets, numbers and special characters.</string>
    <string name="signUp_firstName_length">Please enter first name between 2–25 characters.</string>
    <string name="signUp_lastName_length">Please enter Last name between 2–25 characters.</string>
    <string name="signUp_addressOne_empty">Please search your address.</string>
    <string name="signUp_city_empty">Please enter city.</string>
    <string name="signUp_state_empty">Please select state.</string>
    <string name="signUp_zip_empty">Please enter zip code.</string>
    <string name="signUp_contact_number">Please enter your Phone Number.</string>
    <string name="signUp_email_empty">Please enter company E-Mail.</string>
    <string name="signUp_email_valid">Please enter a valid E-Mail.</string>
    <string name="signUp_secondary_email_valid">Please enter a valid secondary E-Mail.</string>
    <string name="product_promoted_text">Select products you promoted</string>
    <string name="product_promote_text_inner">Select whichever products  you promote</string>
    <string name="search_product">Search Product</string>
    <string name="dialog_add_team_member">Add Team Member</string>
    <string name="enter_email">Enter email</string>
    <string name="save">Save</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="location">Location</string>
    <string name="zip_code">Zip Code</string>
    <string name="title_location_permission">Please give location Permissions</string>
    <string name="ok">OK</string>
    <string name="mobile_welcome">Welcom to Sam !</string>
    <string name="welcome_message"><![CDATA[Find & Book hair ,make up and beauty salons and professionals]]></string>
    <string name="sam_will_send_one">Sam will send one time SMS message to verify your phone number</string>
    <string name="enter_phone_number">enter your phone number</string>
    <string name="verify">VERIFY</string>
    <string name="salony_would_like">Salony would like to access your <b>location</b></string>
    <string name="location_terms">we\'ll use your current location to offer best deals around you. it\'s completely private and secure.</string>
    <string name="enable_services_now">Enable location serices</string>
    <string name="i_will_do_later">No, l\'ll do it later</string>
    <string name="man">Man</string>
    <string name="home">Home</string>
    <string name="my_wallet">My wallet</string>
    <string name="search">search</string>
    <string name="favourites">Favourites</string>
    <string name="send_feedback">Send feedback</string>
    <string name="change_language">Change the language</string>
    <string name="my_account">My account</string>
    <string name="list_your_business">List your business</string>
    <string name="now_showing_in">Now showing salons in United Arab Emirates</string>
    <string name="you_can_change">You can always change your location in settings</string>
    <string name="got_it">Got it</string>
</resources>