<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivLogoMobileAuth"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:tint="@android:color/white"
        app:srcCompat="@mipmap/launchers_icon" />

    <TextView
        android:id="@+id/tvWelcomeToSam"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        android:text="@string/mobile_welcome"
        android:textSize="@dimen/_28ssp" />

    <TextView
        android:id="@+id/tvWelcomeMessage"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:maxLines="3"
        android:text="@string/welcome_message"
        android:textSize="@dimen/_18ssp" />

    <ImageView
        android:id="@+id/ivSmartPhoneMobileAuth"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:srcCompat="@mipmap/smartphone_mobile_auth" />

    <TextView
        android:id="@+id/textView"
        style="@style/Base.TextAppearance.AppCompat.Small"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/sam_will_send_one"
        android:textSize="@dimen/_14ssp" />

    <LinearLayout
        android:id="@+id/llPhoneLayout"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="@dimen/_34sdp"
        android:layout_margin="28dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edit_text"
        android:orientation="horizontal">

        <com.rilixtech.CountryCodePicker
            android:id="@+id/tvCountryCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:gravity="center"
            android:textColor="@android:color/darker_gray"
            app:ccp_backgroundColor="@android:color/white"
            app:ccp_hideNameCode="true"
            app:ccp_setCountryByTimeZone="true"
            app:ccp_showFlag="false" />

        <View
            android:layout_width="@dimen/_1sdp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <EditText
            android:id="@+id/etPhoneNumber"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@android:color/white"
            android:hint="@string/enter_phone_number"
            android:inputType="phone"
            android:paddingStart="16dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="@dimen/_14ssp" />
    </LinearLayout>

    <Button
        android:id="@+id/btVerify"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/drawable_button_background"
        android:text="@string/verify"
        android:textSize="@dimen/_16ssp" />


</LinearLayout>