<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    >

    <ImageView
        android:id="@+id/ivLocationLogo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tvSamWouldLike"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.035"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/location" />

    <TextView
        android:layout_marginStart="@dimen/_32sdp"
        android:id="@+id/tvSamWouldLike"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/salony_would_like"
        android:textSize="@dimen/_28ssp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_marginStart="@dimen/_32sdp"
        android:id="@+id/tvLocationTerms"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/location_terms"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <Button
        android:id="@+id/btEnableServices"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/_32sdp"
        android:background="@drawable/rounded_edit_text"
        android:text="@string/enable_services_now"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLocationTerms" />

    <Button
        android:id="@+id/btLater"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/drawable_button_background"
        android:text="@string/i_will_do_later"
        app:layout_constraintEnd_toEndOf="@+id/btEnableServices"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btEnableServices"
        app:layout_constraintTop_toBottomOf="@+id/btEnableServices" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        app:layout_constraintGuide_percent=".5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />


</android.support.constraint.ConstraintLayout>